@@ -111,11 +111,12 @@ igmp_mrouter_create(struct ovsdb_idl_txn *idl_txn,
 }
 
 void
-igmp_group_update_ports(const struct sbrec_igmp_group *g,
+igmp_group_update(const struct sbrec_igmp_group *g,
                         struct ovsdb_idl_index *datapaths,
                         struct ovsdb_idl_index *port_bindings,
                         const struct mcast_snooping *ms OVS_UNUSED,
-                        const struct mcast_group *mc_group)
+                        const struct mcast_group *mc_group,
+                        const bool igmp_support_protocol)
     OVS_REQ_RDLOCK(ms->rwlock)
 {
     struct igmp_group_port *old_ports_storage =
@@ -153,6 +154,12 @@ igmp_group_update_ports(const struct sbrec_igmp_group *g,
     struct igmp_group_port *igmp_port;
     HMAP_FOR_EACH_POP (igmp_port, hmap_node, &old_ports) {
         sbrec_igmp_group_update_ports_delvalue(g, igmp_port->port);
+    }
+
+    /* set Group protocol */
+    if (igmp_support_protocol) {
+         sbrec_igmp_group_set_protocol(g, mcast_snooping_group_protocol_str(
+                                       mc_group->protocol_version));
     }
 
     free(old_ports_storage);
