@@ -181,6 +181,7 @@ struct pinctrl {
     bool fdb_can_timestamp;
     bool dns_supports_ovn_owned;
     bool igmp_group_has_chassis_name;
+    bool igmp_support_protocol;
 };
 
 static struct pinctrl pinctrl;
@@ -3599,6 +3600,17 @@ pinctrl_update(const struct ovsdb_idl *idl, const char *br_int_name)
         notify_pinctrl_handler();
     }
 
+    bool igmp_support_proto =
+            sbrec_server_has_igmp_group_table_col_protocol(idl);
+    if (igmp_support_proto != pinctrl.igmp_support_protocol) {
+        pinctrl.igmp_support_protocol = igmp_support_proto;
+
+        /* Notify pinctrl_handler that igmp protocol column
+         * availability has changed. */
+        notify_pinctrl_handler();
+    }
+
+
     ovs_mutex_unlock(&pinctrl_mutex);
 }
 
@@ -5409,9 +5421,9 @@ ip_mcast_sync(struct ovsdb_idl_txn *ovnsb_idl_txn,
                     chassis, pinctrl.igmp_group_has_chassis_name);
             }
 
-            igmp_group_update_ports(sbrec_igmp, sbrec_datapath_binding_by_key,
+            igmp_group_update(sbrec_igmp, sbrec_datapath_binding_by_key,
                                     sbrec_port_binding_by_key, ip_ms->ms,
-                                    mc_group);
+                                    mc_group, pinctrl.igmp_support_protocol);
         }
 
         /* Mrouters. */
